libx11 (2:1.2-1) UNRELEASED; urgency=low

  * New upstream release.
  * Remove obsolete ld.so.conf handling from libx11-6 postinst.

 -- Julien Cristau <jcristau@debian.org>  Sun, 21 Dec 2008 18:09:12 +0100

libx11 (2:1.1.99.2-1) experimental; urgency=low

  * New upstream release.
  * Use new xcb socket handoff mechanism, update (build-)dependencies.
  * Refresh patches.
  * Build-dep on x11proto-core-dev >= 7.0.13.

 -- Julien Cristau <jcristau@debian.org>  Mon, 01 Dec 2008 22:37:28 +0100

libx11 (2:1.1.5-2) unstable; urgency=medium

  * Cherry-picked from upstream git: Fix an XCB leak when the client has a
    non-fatal error handler.

 -- Julien Cristau <jcristau@debian.org>  Thu, 25 Sep 2008 17:45:25 +0200

libx11 (2:1.1.5-1) unstable; urgency=low

  [ Brice Goglin ]
  * Add upstream URL to debian/copyright.
  * Add a link to www.X.org and a reference to the upstream module
    in the long description.

  [ Timo Aaltonen ]
  * New upstream release.
    + adds missing <cedilla> Compose sequences (closes: #394068)

  [ Julien Cristau ]
  * 014_add_Khmer_digraphs.diff: remove, applied upstream
  * 006_tailor_pt_BR.UTF-8_Compose.diff: update

 -- Julien Cristau <jcristau@debian.org>  Sun, 14 Sep 2008 19:09:33 +0200

libx11 (2:1.1.4-2) unstable; urgency=low

  * Drop Pre-Depends on x11-common from libx11-6, libx11-data and libx11-xcb1.
  * Pull from upstream libX11-1.1-branch
    + fixes Compose sequences for finnish keyboards (closes: #467142)
    + interrobang has been added to the en_US.UTF-8 Compose file
      (closes: #300160)
  * Update patch 006_tailor_pt_BR.UTF-8_Compose.diff, refresh others.
  * Drop the NEWS entry about sun java.  sun-java6 is now fixed, and libxcb
    doesn't abort() anymore on the locking error.
  * (Finally) upload Xlib/XCB to unstable.

 -- Julien Cristau <jcristau@debian.org>  Mon, 09 Jun 2008 16:27:23 +0200

libx11 (2:1.1.4-1) experimental; urgency=low

  [ Timo Aaltonen ]